# kaggle-digit-recognizer

./: .gitignore  LICENSE  pyproject.toml  pyrightconfig.json
src/kaggle_digit_recognizer/: cli.py  dataset.py  evaluate.py  model.py  train.py  transforms.py
