[project]
name = "kaggle-digit-recognizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bobby Gebert", email = "bobgebert7@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.3",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[project.scripts]
cli = "kaggle_digit_recognizer.cli:main"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "torchvision.*"
ignore_missing_imports = true

[tool.isort]
profile = "black"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
]
